# canada_drones

./: README.md  installation.sh
ardrone_moveit_config/: .setup_assistant  package.xml
ardrone_moveit_config/launch/: demo_gazebo.launch  gazebo.launch  planning_context.launch  quadrotor_hokuyo_utm30lx_moveit_controller_manager.launch.xml
drone_bringup/: CMakeLists.txt  package.xml
drone_bringup/launch/: all.launch
drone_controller/: CMakeLists.txt  package.xml
drone_controller/include/: drone_controller.h
drone_controller/launch/: controller.launch
drone_controller/src/: drone_controller.cpp
drone_msgs/: CMakeLists.txt  package.xml
drone_msgs/msg/: Poses.msg
drone_msgs/srv/: PosesList.srv
drone_service/: CMakeLists.txt  package.xml
drone_service/launch/: service.launch
drone_service/src/: service.py
files/: ardrone_test_world.world  cube_24vert.stl  cube_98vert.stl  spawn_points.sh  sphere_98vert.stl  vertices.urdf
load_octomap/launch/: load_octomap.launch
load_octomap/src/: octo_load.py
rtab_package/: package.xml
rtab_package/launch/: rtab_localization.launch  rtabmap.launch
stl_parser/: CMakeLists.txt  package.xml
stl_parser/launch/: parser.launch
stl_parser/src/: stl_parser.py
