<?xml version="1.0"?>
<package format="2">
  <name>drone_controller</name>
  <version>0.0.0</version>
  <description>The drone_controller package</description>

  <maintainer email="user@todo.todo">user</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>drone_msgs</depend>
  <depend>geometry_msgs</depend>


  <export>

  </export>
</package>
