cmake_minimum_required(VERSION 3.0.2)
project(drone_service)


find_package(catkin REQUIRED)


###################################
## catkin specific configuration ##
###################################
catkin_package(
#  INCLUDE_DIRS include
#  LIBRARIES motor_controller
#  CATKIN_DEPENDS other_catkin_pkg
#  DEPENDS system_lib
)